tests/f-stack/error/f-stack-error2.pkt
// DO NOT delete or add line in this file

// Establish a connection.
0  socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0 setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0
+0 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0
+0 bind(3, ..., ...) = 0
+0 listen(3, 1) = 0

+0 < S 0:0(0) win 12336 <TS val 100 ecr 0,eol,mss 14705,eol>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792 <mss 1000,sackOK,nop,wscale 7, nop, nop>
+0.2 accept(3, ..., ...) = 4
+0 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:2833(2832) ack 1 win 25726 
+0 < . 1:7999(7998) ack 1 win 25198 
+0 < . 7999:13219(5220) ack 1 win 13129 
+0 < . 7999:8760(761) ack 1 win 30256 
+0 < . 8760:14656(5896) ack 892600372 win 36462 
+0.1 read(4, ..., 20000) =  13218

+0 < . 8760:9769(1009) ack 1 win 14709 <sackOK,eol,eol>
+0 < . 9769:17706(7937) ack 1 win 30540 <nop,eol,eol,eol>
+0.1 read(4, ..., 20000) =  4487

+0 < . 17706:26874(9168) ack 2560098456 win 28277 
// f-stack got 9168
+0.1 read(4, ..., 20000) =  -1
